emoji_window/emoji_window.h



// 缁勫悎妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *ComboBoxCallback)(HWND hComboBox, int index);


// 鐑敭鎺т欢鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *HotKeyCallback)(HWND hHotKey, int vk_code, int modifiers);


// 鍊兼敼鍙樺洖璋?(hwnd)
typedef void (__stdcall *ValueChangedCallback)(HWND hwnd);


// 鍒嗙粍妗嗗洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *GroupBoxCallback)(HWND hGroupBox);


    // ========== TabControl 鍔熻兘 ==========

    // 鍒涘缓 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 娣诲姞 Tab 椤?
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 鍙€夛紝鑻ヤ负 NULL 鍒欒嚜鍔ㄥ垱寤?
    );


    // 绉婚櫎 Tab 椤?
    __declspec(dllexport) BOOL __stdcall RemoveTabItem(
        HWND hTabControl,
        int index
    );


    // 鑾峰彇褰撳墠閫変腑鐨?Tab 绱㈠紩
    __declspec(dllexport) int __stdcall GetCurrentTabIndex(
        HWND hTabControl
    );


    // 鍒囨崲鍒版寚瀹?Tab
    __declspec(dllexport) BOOL __stdcall SelectTab(
        HWND hTabControl,
        int index
    );


    // 鑾峰彇 Tab 鏁伴噺
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );
    // 鑾峰彇鎸囧畾 Tab 椤电殑鏍囬锛圲TF-8锛屼袱娆¤皟鐢ㄦā寮忥級
    __declspec(dllexport) int __stdcall GetTabTitle(
        HWND hTabControl,
        int index,
        unsigned char* buffer,
        int bufferSize
    );


    // 璁剧疆鎸囧畾 Tab 椤电殑鏍囬锛圲TF-8锛?
    __declspec(dllexport) int __stdcall SetTabTitle(
        HWND hTabControl,
        int index,
        const unsigned char* title_bytes,
        int title_len
    );


    __declspec(dllexport) int __stdcall SetTabHeaderStyle(
        HWND hTab,
        int style
    );


    // 鍦ㄦ寚瀹氫綅缃彃鍏ユ爣绛鹃〉锛坕ndex < 0 杩斿洖 -1锛岃秴鍑鸿寖鍥磋拷鍔犲埌鏈熬锛?
    __declspec(dllexport) int __stdcall InsertTabItem(
        HWND hTab,
        int index,
        const unsigned char* title,
        int titleLen,
        HWND hContent
    );


    // 娣诲姞缁勫悎妗嗛」鐩?
    __declspec(dllexport) int __stdcall AddComboItem(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 绉婚櫎缁勫悎妗嗛」鐩?
    __declspec(dllexport) void __stdcall RemoveComboItem(
        HWND hComboBox,
        int index
    );


    // 娓呯┖缁勫悎妗?
    __declspec(dllexport) void __stdcall ClearComboBox(
        HWND hComboBox
    );


    // 鑾峰彇缁勫悎妗嗛€変腑椤圭储寮?
    __declspec(dllexport) int __stdcall GetComboSelectedIndex(
        HWND hComboBox
    );


    // 璁剧疆缁勫悎妗嗛€変腑椤圭储寮?
    __declspec(dllexport) void __stdcall SetComboSelectedIndex(
        HWND hComboBox,
        int index
    );


    // 鑾峰彇缁勫悎妗嗛」鐩暟閲?
    __declspec(dllexport) int __stdcall GetComboItemCount(
        HWND hComboBox
    );


    // 鑾峰彇缁勫悎妗嗛」鐩枃鏈?
    __declspec(dllexport) int __stdcall GetComboItemText(
        HWND hComboBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆缁勫悎妗嗗洖璋?
    __declspec(dllexport) void __stdcall SetComboBoxCallback(
        HWND hComboBox,
        ComboBoxCallback callback
    );


    // 鍚敤/绂佺敤缁勫悎妗?
    __declspec(dllexport) void __stdcall EnableComboBox(
        HWND hComboBox,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌缁勫悎妗?
    __declspec(dllexport) void __stdcall ShowComboBox(
        HWND hComboBox,
        BOOL show
    );


    // 璁剧疆缁勫悎妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetComboBoxBounds(
        HWND hComboBox,
        int x, int y, int width, int height
    );


    // 鑾峰彇缁勫悎妗嗘枃鏈?
    __declspec(dllexport) int __stdcall GetComboBoxText(
        HWND hComboBox,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆缁勫悎妗嗘枃鏈?
    __declspec(dllexport) void __stdcall SetComboBoxText(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );
    __declspec(dllexport) void __stdcall SetComboBoxColors(
        HWND hComboBox,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 select_color,
        UINT32 hover_color
    );

    // ========== D2D缁勫悎妗嗗姛鑳斤紙鏀寔褰╄壊emoji锛?==========

    // 鍒涘缓D2D缁勫悎妗?
    __declspec(dllexport) HWND __stdcall CreateD2DComboBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL readonly,
        UINT32 fg_color,
        UINT32 bg_color,
        int item_height,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 娣诲姞D2D缁勫悎妗嗛」鐩?
    __declspec(dllexport) int __stdcall AddD2DComboItem(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 娓呯┖D2D缁勫悎妗?
    __declspec(dllexport) void __stdcall ClearD2DComboBox(
        HWND hComboBox
    );


    // 鑾峰彇D2D缁勫悎妗嗛€変腑椤圭储寮?
    __declspec(dllexport) int __stdcall GetD2DComboSelectedIndex(
        HWND hComboBox
    );


    // 璁剧疆D2D缁勫悎妗嗛€変腑椤圭储寮?
    __declspec(dllexport) void __stdcall SetD2DComboSelectedIndex(
        HWND hComboBox,
        int index
    );


    // 鑾峰彇D2D缁勫悎妗嗛」鐩暟閲?
    __declspec(dllexport) int __stdcall GetD2DComboItemCount(
        HWND hComboBox
    );


    // 鑾峰彇D2D缁勫悎妗嗛」鐩枃鏈?
    __declspec(dllexport) int __stdcall GetD2DComboItemText(
        HWND hComboBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 鑾峰彇D2D缁勫悎妗嗙紪杈戞鏂囨湰
    __declspec(dllexport) int __stdcall GetD2DComboText(
        HWND hComboBox,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆D2D缁勫悎妗嗙紪杈戞鏂囨湰
    __declspec(dllexport) void __stdcall SetD2DComboText(
        HWND hComboBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆D2D缁勫悎妗嗗洖璋?
    __declspec(dllexport) void __stdcall SetD2DComboBoxCallback(
        HWND hComboBox,
        ComboBoxCallback callback
    );
    __declspec(dllexport) void __stdcall SetD2DComboBoxColors(
        HWND hComboBox,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 select_color,
        UINT32 hover_color,
        UINT32 border_color,
        UINT32 button_color
    );

    // ========== D2D 鏃ユ湡鏃堕棿閫夋嫨鍣紙Element 椋庢牸寮瑰嚭灞傦紝鏀寔褰╄壊 emoji 鏄剧ず鏂囨湰锛?==========

    __declspec(dllexport) HWND __stdcall CreateD2DDateTimePicker(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_precision,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 border_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    __declspec(dllexport) int __stdcall GetD2DDateTimePickerPrecision(HWND hPicker);

    __declspec(dllexport) void __stdcall SetD2DDateTimePickerPrecision(HWND hPicker, int precision);


    __declspec(dllexport) void __stdcall GetD2DDateTimePickerDateTime(
        HWND hPicker,
        int* year,
        int* month,
        int* day,
        int* hour,
        int* minute,
        int* second
    );


    __declspec(dllexport) void __stdcall SetD2DDateTimePickerDateTime(
        HWND hPicker,
        int year,
        int month,
        int day,
        int hour,
        int minute,
        int second
    );


    __declspec(dllexport) void __stdcall SetD2DDateTimePickerCallback(
        HWND hPicker,
        ValueChangedCallback callback
    );


    __declspec(dllexport) void __stdcall EnableD2DDateTimePicker(HWND hPicker, BOOL enable);

    __declspec(dllexport) void __stdcall ShowD2DDateTimePicker(HWND hPicker, BOOL show);

    __declspec(dllexport) void __stdcall SetD2DDateTimePickerBounds(
        HWND hPicker,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall SetD2DDateTimePickerColors(
        HWND hPicker,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 border_color
    );


    // ========== 鐑敭鎺т欢鍔熻兘 ==========

    // 鍒涘缓鐑敭鎺т欢
    __declspec(dllexport) HWND __stdcall CreateHotKeyControl(
        HWND hParent,
        int x, int y, int width, int height,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 鑾峰彇鐑敭
    __declspec(dllexport) void __stdcall GetHotKey(
        HWND hHotKey,
        int* vk_code,
        int* modifiers
    );


    // 璁剧疆鐑敭
    __declspec(dllexport) void __stdcall SetHotKey(
        HWND hHotKey,
        int vk_code,
        int modifiers
    );


    // 娓呴櫎鐑敭
    __declspec(dllexport) void __stdcall ClearHotKey(
        HWND hHotKey
    );


    // 璁剧疆鐑敭鍥炶皟
    __declspec(dllexport) void __stdcall SetHotKeyCallback(
        HWND hHotKey,
        HotKeyCallback callback
    );


    // 鍚敤/绂佺敤鐑敭鎺т欢
    __declspec(dllexport) void __stdcall EnableHotKeyControl(
        HWND hHotKey,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌鐑敭鎺т欢
    __declspec(dllexport) void __stdcall ShowHotKeyControl(
        HWND hHotKey,
        BOOL show
    );


    // 璁剧疆鐑敭鎺т欢浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetHotKeyControlBounds(
        HWND hHotKey,
        int x, int y, int width, int height
    );
    __declspec(dllexport) void __stdcall SetHotKeyColors(
        HWND hHotKey,
        UINT32 fg_color,
        UINT32 bg_color,
        UINT32 border_color
    );

    // ========== 鍒嗙粍妗嗗姛鑳?==========

    // 鍒涘缓鍒嗙粍妗?
    __declspec(dllexport) HWND __stdcall CreateGroupBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* title_bytes,
        int title_len,
        UINT32 border_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 娣诲姞瀛愭帶浠跺埌鍒嗙粍妗?
    __declspec(dllexport) void __stdcall AddChildToGroup(
        HWND hGroupBox,
        HWND hChild
    );


    // 浠庡垎缁勬绉婚櫎瀛愭帶浠?
    __declspec(dllexport) void __stdcall RemoveChildFromGroup(
        HWND hGroupBox,
        HWND hChild
    );


    // 璁剧疆鍒嗙粍妗嗘爣棰?
    __declspec(dllexport) void __stdcall SetGroupBoxTitle(
        HWND hGroupBox,
        const unsigned char* title_bytes,
        int title_len
    );


    // 鍚敤/绂佺敤鍒嗙粍妗?
    __declspec(dllexport) void __stdcall EnableGroupBox(
        HWND hGroupBox,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌鍒嗙粍妗?
    __declspec(dllexport) void __stdcall ShowGroupBox(
        HWND hGroupBox,
        BOOL show
    );


    // 璁剧疆鍒嗙粍妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetGroupBoxBounds(
        HWND hGroupBox,
        int x, int y, int width, int height
    );


    // 璁剧疆鍒嗙粍妗嗗洖璋?
    __declspec(dllexport) void __stdcall SetGroupBoxCallback(
        HWND hGroupBox,
        GroupBoxCallback callback
    );
    __declspec(dllexport) HWND __stdcall CreatePanel(
        HWND hParent,
        int x, int y, int width, int height,
        UINT32 bg_color
    );
    __declspec(dllexport) void __stdcall SetPanelBackgroundColor(
        HWND hPanel,
        UINT32 bg_color
    );
    __declspec(dllexport) int __stdcall GetPanelBackgroundColor(
        HWND hPanel,
        UINT32* bg_color
    );
    // 鑾峰彇鍒嗙粍妗嗘爣棰?
    __declspec(dllexport) int __stdcall GetGroupBoxTitle(
        HWND hGroupBox,
        unsigned char* buffer,
        int buffer_size
    );


    __declspec(dllexport) void __stdcall SetGroupBoxTitleColor(
        HWND hGroupBox,
        UINT32 title_color
    );


    __declspec(dllexport) void __stdcall SetGroupBoxStyle(
        HWND hGroupBox,
        int style
    );


    __declspec(dllexport) int __stdcall GetGroupBoxStyle(
        HWND hGroupBox
    );