examples/Csharp/Common/EmojiWindowNative.cs


        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateD2DComboBox(IntPtr parent, int x, int y, int width, int height, [MarshalAs(UnmanagedType.Bool)] bool readOnly, uint fgColor, uint bgColor, int itemHeight, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddD2DComboItem(IntPtr hComboBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ClearD2DComboBox(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetD2DComboSelectedIndex(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DComboSelectedIndex(IntPtr hComboBox, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetD2DComboItemCount(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetD2DComboItemText(IntPtr hComboBox, int index, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetD2DComboText(IntPtr hComboBox, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DComboText(IntPtr hComboBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DComboBoxCallback(IntPtr hComboBox, ComboBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DComboBoxColors(IntPtr hComboBox, uint fgColor, uint bgColor, uint selectColor, uint hoverColor, uint borderColor, uint buttonColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddComboItem(IntPtr hComboBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void RemoveComboItem(IntPtr hComboBox, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ClearComboBox(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetComboSelectedIndex(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetComboSelectedIndex(IntPtr hComboBox, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetComboItemCount(IntPtr hComboBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetComboItemText(IntPtr hComboBox, int index, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetComboBoxCallback(IntPtr hComboBox, ComboBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableComboBox(IntPtr hComboBox, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowComboBox(IntPtr hComboBox, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetComboBoxBounds(IntPtr hComboBox, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetComboBoxText(IntPtr hComboBox, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetComboBoxText(IntPtr hComboBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetComboBoxColors(IntPtr hComboBox, uint fgColor, uint bgColor, uint borderColor, uint buttonColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateD2DDateTimePicker(IntPtr parent, int x, int y, int width, int height, int precision, uint fgColor, uint bgColor, uint borderColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetD2DDateTimePickerPrecision(IntPtr hPicker);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DDateTimePickerPrecision(IntPtr hPicker, int precision);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void GetD2DDateTimePickerDateTime(IntPtr hPicker, out int year, out int month, out int day, out int hour, out int minute, out int second);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DDateTimePickerDateTime(IntPtr hPicker, int year, int month, int day, int hour, int minute, int second);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DDateTimePickerCallback(IntPtr hPicker, ValueChangedCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableD2DDateTimePicker(IntPtr hPicker, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowD2DDateTimePicker(IntPtr hPicker, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DDateTimePickerBounds(IntPtr hPicker, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DDateTimePickerColors(IntPtr hPicker, uint fgColor, uint bgColor, uint borderColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateHotKeyControl(IntPtr parent, int x, int y, int width, int height, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void GetHotKey(IntPtr hHotKey, out int vkCode, out int modifiers);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetHotKey(IntPtr hHotKey, int vkCode, int modifiers);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ClearHotKey(IntPtr hHotKey);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetHotKeyCallback(IntPtr hHotKey, HotKeyCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableHotKeyControl(IntPtr hHotKey, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowHotKeyControl(IntPtr hHotKey, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetHotKeyControlBounds(IntPtr hHotKey, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetHotKeyColors(IntPtr hHotKey, uint fgColor, uint bgColor, uint borderColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateGroupBox(IntPtr parent, int x, int y, int width, int height, byte[] titleBytes, int titleLen, uint borderColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void AddChildToGroup(IntPtr hGroupBox, IntPtr hChild);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void RemoveChildFromGroup(IntPtr hGroupBox, IntPtr hChild);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetGroupBoxTitle(IntPtr hGroupBox, byte[] titleBytes, int titleLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableGroupBox(IntPtr hGroupBox, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowGroupBox(IntPtr hGroupBox, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetGroupBoxBounds(IntPtr hGroupBox, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetGroupBoxCallback(IntPtr hGroupBox, GroupBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetGroupBoxTitle(IntPtr hGroupBox, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetGroupBoxStyle(IntPtr hGroupBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetGroupBoxTitleColor(IntPtr hGroupBox, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetGroupBoxStyle(IntPtr hGroupBox, int style);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreatePanel(IntPtr parent, int x, int y, int width, int height, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetPanelBackgroundColor(IntPtr hPanel, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetPanelBackgroundColor(IntPtr hPanel);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateTabControl(IntPtr parent, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int AddTabItem(IntPtr hTabControl, byte[] titleBytes, int titleLen, IntPtr hContentWindow);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int InsertTabItem(IntPtr hTabControl, int index, byte[] titleBytes, int titleLen, IntPtr hContentWindow);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool RemoveTabItem(IntPtr hTabControl, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetCurrentTabIndex(IntPtr hTabControl);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SelectTab(IntPtr hTabControl, int index);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetTabCount(IntPtr hTabControl);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetTabTitle(IntPtr hTabControl, int index, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabTitle(IntPtr hTabControl, int index, byte[] titleBytes, int titleLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int SetTabHeaderStyle(IntPtr hTabControl, int style);
